--- a/index.html
+++ b/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Eemeli0123</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
 <body>
+  <h1>Eemeli0123</h1>
+  <br>
+  <button onclick="window.open('http://example.com', '_blank');">example.com new tab</button>
+  <br><br>
+  <button onclick="window.location.href = 'https://example.com';">example.com redirect</button>
 
-<h1>Hello</h1>
-
-<p>world!</p>
 
 </body>
+
 </html>
