--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1>Eemeli0123</h1>
   <br>
-  <button onclick="window.location.href = 'https://Eemeli0123.github.io/rickroll.html';">RickRoll</button>
+  <button onclick="window.location.href = 'https://Eemeli0123.github.io/dwhc';">Discord Webhook Controller</button>
 
 
 </body>
