--- a/dwhc/index.html
+++ b/dwhc/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 
-<input type="text" id="myTextbox">
+<br><br><br>
+
+<input type="text" id="myTextbox"><br>
 <button>Send</button>
 
 </body>
