--- a/dwhc/index.html
+++ b/dwhc/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<br><br><br>
+<input type="text" id="urlTextbox" placeholder="URL"><br><br><br>
 
 <input type="text" id="myTextbox">
 <button>Send</button>
