--- a/dwhc/index.html
+++ b/dwhc/index.html
@@ -7,9 +7,10 @@
 </head>
 <body>
 
-<input type="text" id="urlTextbox" placeholder="URL"><br><br><br>
+<textarea id="urlTextarea" rows="1" cols="50" placeholder="URL"></textarea><br>
 
-<input type="text" id="myTextbox">
+<textarea id="myTextarea" rows="4" cols="50"></textarea><br>
+
 <button>Send</button>
 
 </body>
