--- a/dwhc/index.html
+++ b/dwhc/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<textarea id="urlTextarea" rows="1" cols="50" placeholder="URL"></textarea><br>
+<textarea id="urlTextarea" rows="2" cols="50" placeholder="URL"></textarea><br><br><br>
 
 <textarea id="myTextarea" rows="4" cols="50"></textarea><br>
 
