--- a/dwhc/index.html
+++ b/dwhc/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 
+<h1 id="connectionStatus">Disconnected</h1>
+
 <textarea id="urlTextarea" rows="2" cols="50" placeholder="URL"></textarea>
 <button>Connect</button>
 <button>Disconnect</button><br><br><br>
