--- a/dwhc/index.html
+++ b/dwhc/index.html
@@ -18,7 +18,9 @@
 <button id="connectButton">Connect</button>
 <button id="disconnectButton">Disconnect</button><br><br><br>
 
-<textarea id="myTextarea" rows="4" cols="50"></textarea><br>
+<textarea id="tokenTextarea" rows="4" cols="50" placeholder="Token"></textarea><br>
+
+<textarea id="myTextarea" rows="7" cols="50"></textarea><br>
 
 <button>Send</button>
 
