--- a/dwhc/index.html
+++ b/dwhc/index.html
@@ -16,9 +16,9 @@
 
 <textarea id="urlTextarea" rows="2" cols="50" placeholder="URL"></textarea>
 <button id="connectButton">Connect</button>
-<button id="disconnectButton">Disconnect</button><br><br><br>
+<button id="disconnectButton">Disconnect</button><br>
 
-<textarea id="tokenTextarea" rows="4" cols="50" placeholder="Token"></textarea><br>
+<textarea id="tokenTextarea" rows="4" cols="50" placeholder="Token"></textarea><br><br><br>
 
 <textarea id="myTextarea" rows="7" cols="50"></textarea><br>
 
