--- a/hworld/index.html
+++ b/hworld/index.html
@@ -1,2 +1,16 @@
 <doctype html>
-  <h1>Hello world</h1>
+  <html>
+    <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>DWHC</title>
+      <style>
+          body {
+              font-family: Arial, sans-serif;
+          }
+      </style>
+    </head>
+    <body>
+    <h1>Hello world</h1>
+    </body>
+  </html>
