--- a/anthias/index.html
+++ b/anthias/index.html
@@ -63,10 +63,15 @@
         async function updateWeather() {
             try {
                 const response = await fetch('http://api.weatherapi.com/v1/current.json?key=096efd03636a466e95b125113240207&q=Lemi&aqi=no');
+                if (!response.ok) {
+                    throw new Error(`HTTP error! status: ${response.status}`);
+                }
                 const data = await response.json();
+                console.log(data); // Log the data for debugging
                 const weatherString = `${data.current.condition.text}, ${data.current.temp_c}°C`;
                 document.getElementById('weatherDisplay').textContent = weatherString;
             } catch (error) {
+                console.error('Error fetching weather data:', error);
                 document.getElementById('weatherDisplay').textContent = 'Error fetching weather data';
             }
         }
