--- a/anthias/index.html
+++ b/anthias/index.html
@@ -62,7 +62,7 @@
         // Function to update the weather every 10 minutes
         async function updateWeather() {
             try {
-                const response = await fetch('http://api.weatherapi.com/v1/current.json?key=096efd03636a466e95b125113240207&q=Lemi&aqi=no');
+                const response = await fetch('https://api.weatherapi.com/v1/current.json?key=096efd03636a466e95b125113240207&q=Lemi&aqi=no');
                 if (!response.ok) {
                     throw new Error(`HTTP error! status: ${response.status}`);
                 }
