--- a/weather/index.html
+++ b/weather/index.html
@@ -33,7 +33,7 @@
 <script>
   // Replace 'YOUR_API_KEY' with your actual WeatherAPI key
   const apiKey = 'YOUR_API_KEY';
-  const apiUrl = `https://api.weatherapi.com/v1/current.json?key=$096efd03636a466e95b125113240207&q=Lemi`;
+  const apiUrl = `https://api.weatherapi.com/v1/current.json?key=096efd03636a466e95b125113240207&q=Lemi`;
 
   fetch(apiUrl)
     .then(response => response.json())
