--- a/weather/index.html
+++ b/weather/index.html
@@ -35,7 +35,7 @@
 <script>
   // Replace 'YOUR_API_KEY' with your actual WeatherAPI key
   const apiKey = '096efd03636a466e95b125113240207';
-  const apiUrl = `https://api.weatherapi.com/v1/current.json?key=${apiKey}&q=New York`;
+  const apiUrl = `https://api.weatherapi.com/v1/current.json?key=${apiKey}&q=Lemi`;
 
   fetch(apiUrl)
     .then(response => response.json())
