--- a/weather/index.html
+++ b/weather/index.html
@@ -43,10 +43,11 @@
       console.log(data); // Log the JSON response for inspection
       const weatherContentElement = document.getElementById('weatherContent');
 
+      const emoji = getWeatherEmoji(data.current.condition.code);
       weatherContentElement.innerHTML = `
-        <p>Weather in ${data.location.name}, ${data.location.region}, ${data.location.country}</p>
-        <p>Current Temperature: ${data.current.temp_c}°C / ${data.current.temp_f}°F</p>
-        <p>Condition: ${data.current.condition.text}</p>
+        <p>${emoji} Weather in ${data.location.name}, ${data.location.region}, ${data.location.country}</p>
+        <p>${emoji} Current Temperature: ${data.current.temp_c}°C / ${data.current.temp_f}°F</p>
+        <p>${emoji} Condition: ${data.current.condition.text}</p>
       `;
     })
     .catch(error => {
@@ -54,6 +55,25 @@
       const weatherContentElement = document.getElementById('weatherContent');
       weatherContentElement.innerHTML = '<p>Failed to fetch weather data. Please try again later.</p>';
     });
+
+  function getWeatherEmoji(weatherCode) {
+    switch (weatherCode) {
+      case 1000: // Sunny
+        return '☀️';
+      case 1003: // Partly cloudy
+        return '⛅';
+      case 1006: // Cloudy
+        return '☁️';
+      case 1180: // Light rain showers
+        return '🌦️';
+      case 1183: // Patchy rain nearby
+        return '🌦️';
+      case 1186: // Moderate or heavy rain shower
+        return '🌧️';
+      default:
+        return '🌍'; // Generic emoji for unknown weather
+    }
+  }
 </script>
 
 </body>
