--- a/weather/index.html
+++ b/weather/index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Weather Information</title>
@@ -28,7 +26,7 @@
 <div class="weather-info">
   <h1>Weather Information</h1>
   <div id="weatherContent">
-    <p>Loading weather data...</p>
+    <h1><p>Loading weather data...</p></h1>
   </div>
 </div>
 
@@ -76,5 +74,5 @@
   }
 </script>
 
-</body>
-</html>
+
+</body></html>
