--- a/weather/index.html
+++ b/weather/index.html
@@ -43,9 +43,9 @@
 
       const emoji = getWeatherEmoji(data.current.condition.code);
       weatherContentElement.innerHTML = `
-        <p>${emoji} Weather in ${data.location.name}, ${data.location.region}, ${data.location.country}</p>
-        <p>${emoji} Current Temperature: ${data.current.temp_c}°C / ${data.current.temp_f}°F</p>
-        <p>${emoji} Condition: ${data.current.condition.text}</p>
+        <p><h1>${emoji} Weather in ${data.location.name}, ${data.location.region}, ${data.location.country}</h1></p>
+        <p><h1>${emoji} Current Temperature: ${data.current.temp_c}°C / ${data.current.temp_f}°F</h1></p>
+        <p><h1>${emoji} Condition: ${data.current.condition.text}</h1></p>
       `;
     })
     .catch(error => {
