--- a/weather/index.html
+++ b/weather/index.html
@@ -1,4 +1,6 @@
-<html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Weather Information</title>
@@ -26,33 +28,46 @@
 <div class="weather-info">
   <h1>Weather Information</h1>
   <div id="weatherContent">
-    <h1><p>Loading weather data...</p></h1>
+    <h1>Loading weather data...</h1>
   </div>
 </div>
 
 <script>
   // Replace 'YOUR_API_KEY' with your actual WeatherAPI key
   const apiKey = '096efd03636a466e95b125113240207';
-  const apiUrl = `https://api.weatherapi.com/v1/current.json?key=${apiKey}&q=Lemi`;
+  let location = 'Lemi'; // Default location
 
-  fetch(apiUrl)
-    .then(response => response.json())
-    .then(data => {
-      console.log(data); // Log the JSON response for inspection
-      const weatherContentElement = document.getElementById('weatherContent');
+  function fetchWeatherAndUpdate() {
+    const apiUrl = `https://api.weatherapi.com/v1/current.json?key=${apiKey}&q=${location}`;
 
-      const emoji = getWeatherEmoji(data.current.condition.code);
-      weatherContentElement.innerHTML = `
-        <p><h1>${emoji} Weather in ${data.location.name}, ${data.location.region}, ${data.location.country}</h1></p>
-        <p><h1>${emoji} Current Temperature: ${data.current.temp_c}°C</h1></p>
-        <p><h1>${emoji} Condition: ${data.current.condition.text}</h1></p>
-      `;
-    })
-    .catch(error => {
-      console.error('Error fetching weather data:', error);
-      const weatherContentElement = document.getElementById('weatherContent');
-      weatherContentElement.innerHTML = '<p>Failed to fetch weather data. Please try again later.</p>';
-    });
+    fetch(apiUrl)
+      .then(response => response.json())
+      .then(data => {
+        console.log(data); // Log the JSON response for inspection
+        const weatherContentElement = document.getElementById('weatherContent');
+
+        const emoji = getWeatherEmoji(data.current.condition.code);
+        weatherContentElement.innerHTML = `
+          <h1><p>${emoji} Weather in ${data.location.name}, ${data.location.region}, ${data.location.country}</p></h1>
+          <h1><p>${emoji} Current Temperature: ${data.current.temp_c}°C</p></h1>
+          <h1><p>${emoji} Condition: ${data.current.condition.text}</p></h1>
+        `;
+      })
+      .catch(error => {
+        console.error('Error fetching weather data:', error);
+        const weatherContentElement = document.getElementById('weatherContent');
+        weatherContentElement.innerHTML = '<h1><p>Failed to fetch weather data. Please try again later.</p></h1>';
+      });
+  }
+
+  // Initial fetch and update
+  fetchWeatherAndUpdate();
+
+  // Function to update weather info on demand
+  function updateWeather(locationName) {
+    location = locationName;
+    fetchWeatherAndUpdate();
+  }
 
   function getWeatherEmoji(weatherCode) {
     switch (weatherCode) {
@@ -74,5 +89,5 @@
   }
 </script>
 
-
-</body></html>
+</body>
+</html>
