--- a/js-test/index.html
+++ b/js-test/index.html
@@ -1,1 +1,19 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JS Test</title>
+</head>
+<body>
+    <button onclick="runTest()">Click Me</button>
+
+    <script>
+        function runTest() {
+            if (window.confirm('test')) {
+                window.alert('it works');
+            }
+        }
+    </script>
+</body>
+</html>
