--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>Eemeli0123</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-</head>
-
-<body>
-  <h1>Eemeli0123</h1>
-  <br>
-  <button onclick="window.location.href = 'https://Eemeli0123.github.io/dwhc';">Discord Webhook Controller</button>
-
-
-</body>
-
+  <head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="globals.css" />
+    <link rel="stylesheet" href="styleguide.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="home">
+      <div class="div">
+        <div class="text-wrapper">Eemeli0123</div>
+        <div class="rectangle"></div>
+      </div>
+    </div>
+  </body>
 </html>
